# StrataBro

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
.github/: .release-please-config.json  CHANGELOG.md  dependabot.yml
.github/workflows/: build-verification.yml  build.yml  create-package.yml  release-please.yml  release.yml
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Stratagem.h  Utils.cpp  Utils.h  Version.h  Version.h.in  stratagem_data.json
